# hash-shader

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.html  plotboi.py  rust-toolchain  tests.py
bitcoin/: block_data.csv  block_data_200000_211223.csv  block_data_200000_300000.csv  block_data_short.csv  flip.py  prepare.py  test_block.py
c/: Makefile  main  main.out  plotboi.py  test_block_chain.py
c/include/: blocks_from_cli.h  blocks_from_csv.h  md32_common.h  md32_common_cu.h  sha256.h  sha256_cu.h  test.h  test_block_chain.h
c/src/: bitcoin.c  bitcoin.cu  main.c  main.cu  sha256.c  sha256.cu  test.c  test.cu
docs/: Makefile  listings.tex  logo.xcf  presentation.md  proposal.md  report.tex
examples/: benckmark.rs  blockchain-val.rs  blockchain_val.rs  prepare_blockchain.py
kernel/: Cargo.toml
kernel/src/: lib.rs
pkg/: package.json  sha256_rgpu.d.ts  sha256_rgpu.js  sha256_rgpu_bg.wasm  sha256_rgpu_bg.wasm.d.ts
src/: blockchain-val.rs  helpers.rs  lib.rs  main.rs  runner.rs
vulkan/: Cargo.toml  README.md  build.rs  rust-toolchain
vulkan/kernel/: Cargo.toml
vulkan/kernel/src/: lib.rs
vulkan/src/: blockchain-val.rs  main.rs  runner.rs
vulkan/tests/: test_abc.rs  test_all.rs
web/: index.html
