[package]
name = "vulkan"
version = "0.1.0"
authors = ["RustyBamboo <d@volya.xyz>"]
edition = "2018"

[[bin]]
name = "blockchain-val"
path = "src/blockchain-val.rs"

[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
wgpu = { version="0.18.0", features=["spirv"] }
futures = "*"
hex = "*"
csv = "*"
bytemuck = "*"
flume = "*"

[build-dependencies]
spirv-builder = "0.9"

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3