[package]
name = "sha256_rgpu"
version = "0.2.0"
authors = ["RustyBamboo <d@volya.xyz>"]
edition = "2018"

[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
wgpu = { version="0.18.0", features=["spirv"] }
futures = "0.3.30"
bytemuck = "1.14.0"
flume = "0.11.0"
rand = "0.8.5"
clap = { version = "4.4.11", features = ["derive"] }

[build-dependencies]
spirv-builder = "0.9"

[dev-dependencies]
hex = "*"
csv = "*"

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
