[package]
name = "sha256_rgpu"
version = "0.2.0"
authors = ["RustyBamboo <d@volya.xyz>"]
edition = "2018"

[[bin]]
name = "sha256_rgpu"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
wgpu = { version="0.18.0", features=["spirv"] }
futures = "0.3.30"
bytemuck = "1.14.0"
flume = "0.11.0"
rand = "0.8.5"
clap = { version = "4.4.11", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4.20"
hex = "0.4.3"
console_log = "1.0"
wgpu = { version = "0.18.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3" }

[build-dependencies]
spirv-builder = "0.9"

[dev-dependencies]
hex = "0.4.3"
csv = "1.3.0"

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
