[package]
name = "vulkan"
version = "0.1.0"
authors = ["RustyBamboo <d@volya.xyz>"]
edition = "2018"

[[bin]]
name = "blockchain-val"
path = "src/blockchain-val.rs"

[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
alkomp = { git = "https://github.com/RustyBamboo/alkomp", branch="web"}
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "1de388afacee" }
futures = "*"
hex = "*"
csv = "*"



[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "4395b841141", default-features = false }
