[package]
name = "kernel"
version = "0.1.0"
authors = ["RustyBamboo <d@volya.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
# Cargo will disgustingly search a repo for subfolders
spirv-std-macros = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "4395b841141" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "4395b841141" }
glam = { version = "0.13", default-features = false, features = ["libm", "scalar-math"] }
